--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
+    "classnames": "^2.5.1",
+    "axios": "^1.3.4",
+    "react-paginate": "^8.1.4",
+    "react-toastify": "^9.1.1",
+    "yup": "^1.0.2",
     "next": "14.1.3"
   },
   "devDependencies": {
