--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.3.4",
+    "classnames": "^2.5.1",
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "classnames": "^2.5.1",
-    "axios": "^1.3.4",
     "react-paginate": "^8.1.4",
     "react-toastify": "^9.1.1",
-    "yup": "^1.0.2",
-    "next": "14.1.3"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
